--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,6 @@
 html {
-  background-color: #e4e9fd;
-  background-image: -webkit-linear-gradient(65deg, #a683e3 50%, #e4e9fd 50%);
+  background-color: #F8E8EE;
+  background-image: -webkit-linear-gradient(65deg, #F2BED1 50%, #F8E8EE 50%);
   min-height: 1000px;
   font-family: "helvetica neue";
 }
@@ -22,13 +22,13 @@ h1 {
 .box {
   max-width: 400px;
   margin: 50px auto;
-  background: white;
+  background: #F9F5F6;
   border-radius: 5px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
 
 #heading {
-  background-color: #a683e3;
+  background-color: #F2BED1;
   text-align: center;
 }
 form.edit {
@@ -39,7 +39,7 @@ form.edit {
   min-height: 70px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #f1f1f1;
+  border-bottom: 1px solid #F8E8EE;
 }
 
 .item:last-child {
@@ -68,7 +68,7 @@ button.add {
   width: 50px;
   border-radius: 50%;
   border-color: transparent;
-  background-color: #a683e3;
+  background-color: #F2BED1;
   color: #fff;
   font-size: 30px;
   border-width: 0;
@@ -98,7 +98,7 @@ input[type="text"] {
 
 input[type="text"]:focus {
   outline: none;
-  box-shadow: inset 0 -3px 0 0 #a683e3;
+  box-shadow: inset 0 -3px 0 0 #F2BED1;
 }
 
 ::placeholder {
