--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <% for(let item of listItems){%>
       <div class="item">
         <form action="/delete" method="post">
-          <input type="checkbox" onchange="this.form.submit()" name="deleteItemId" value="<%= item.id %>">
+          <input type="checkbox" onchange="this.form.submit()" name="deleteItemId" value="<%= item.id %>" />
         </form>
 
         <p id="title<%=item.id%>">
@@ -17,29 +17,32 @@
         </p>
 
         <form class="edit" action="/edit" method="post">
-          <input type="hidden" name="updatedItemId" value="<%= item.id %>">
+          <input type="hidden" name="updatedItemId" value="<%= item.id %>" />
           <input id="input<%=item.id%>" type="text" name="updatedItemTitle" value="<%= item.title %>" autocomplete="off"
             autofocus="true" hidden="true" />
-          <button id="done<%=item.id%>" class="edit" type="submit" hidden><img class="icon"
-              src="/assets/icons/check-mark-pink.svg" alt="tick image"></button>
+          <button id="done<%=item.id%>" class="edit" type="submit" hidden>
+            <img class="icon" src="/assets/icons/check-mark-pink.svg" alt="tick image" />
+          </button>
         </form>
-        <button id="edit<%=item.id%>" class="edit" onclick="handler('<%=item.id%>')"><img class="icon"
-            src="/assets/icons/pinkEdit.svg" alt="pencil image"></button>
+        <button id="edit<%=item.id%>" class="edit" onclick="handler('<%=item.id%>')">
+          <img class="icon" src="/assets/icons/pinkEdit.svg" alt="pencil image" />
+        </button>
       </div>
       <% } %>
 
         <form class="item" action="/add" method="post">
           <input type="text" name="newItem" placeholder="New Item" autocomplete="off" autofocus="true" />
-          <button class="add" type="submit" name="list" value=<%=listTitle %> >+</button>
+          <button class="add" type="submit" name="list" value="<%= listTitle %>"> +
+          </button>
         </form>
   </div>
 
   <script>
     function handler(id) {
-      document.getElementById("title" + id).setAttribute("hidden", true)
-      document.getElementById("edit" + id).setAttribute("hidden", true)
-      document.getElementById("done" + id).removeAttribute("hidden")
-      document.getElementById("input" + id).removeAttribute("hidden")
+      document.getElementById("title" + id).setAttribute("hidden", true);
+      document.getElementById("edit" + id).setAttribute("hidden", true);
+      document.getElementById("done" + id).removeAttribute("hidden");
+      document.getElementById("input" + id).removeAttribute("hidden");
     }
   </script>
   <%- include('partials/footer.ejs'); -%>
