fix(unique):Add only unique items

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
       <% } %>
 
         <form class="item" action="/add" method="post">
-          <input type="text" name="newItem" placeholder="New Item" autocomplete="off" autofocus="true" />
+          <input type="text" name="newItem" placeholder=" <%= locals.error ? error :'New Task' %>" autocomplete="off" autofocus="true" />
           <button class="add" type="submit" name="list" value="<%= listTitle %>"> +
           </button>
         </form>
